chop library works now

--- a/examples/benchmarking.ipynb
+++ b/examples/benchmarking.ipynb
@@ -13,7 +13,7 @@
     "2. SSL-ALM\n",
     "3. Switching Subgradient \n",
     "4. [Cooper](https://github.com/cooper-org/cooper?tab=readme-ov-file)\n",
-    "5. [CHOP](https://github.com/openopt/chop)\n",
+    "5. [CHOP](https://github.com/openopt/chop) - based on the [Frank-Wolfe](https://arxiv.org/pdf/2010.07243)\n",
     "\n",
     "-------------------------------------------------------------------------\n",
     "\n"
@@ -31,7 +31,7 @@
     "n_epochs = 30\n",
     "\n",
     "# log path file\n",
-    "log_path = \"./data/logs/log_benchmark.npz\""
+    "log_path = \"./data/logs/log_benchmark2.npz\""
    ]
   },
   {
@@ -1317,6 +1317,175 @@
     "thresholds = [ constraint_bounds[0] ]\n",
     "\n",
     "plot_losses_and_constraints(losses, constraints, thresholds, titles=['Unconstrained Adam', 'SSL-ALM-SGD', 'SSL-ALM-Adam', 'SSG', 'Cooper-ALM'], plot_individual_constraints=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aba8f34",
+   "metadata": {},
+   "source": [
+    "#### 5. CHOP\n",
+    "\n",
+    "The library is based on the [Sotchastic Franke-Wolfe (SFW)](https://arxiv.org/pdf/2010.07243), which constraints the parameters on a convex set. Thus, the model weights are to be in a closed ball, simplex and such. This can only be used for the determinitic case of benchmarking but cannot be extended to the stochastic constrained case. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ebd1a28a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chop\n",
+    "\n",
+    "# set the seed for fair comparisons\n",
+    "torch.manual_seed(seed_n)\n",
+    "\n",
+    "# create the dataloader\n",
+    "dataloader = torch.utils.data.DataLoader(dataset_train, batch_size=16, shuffle=True)\n",
+    "\n",
+    "# create small FC network - same as the other algorithms\n",
+    "latent_size1 = 64\n",
+    "latent_size2 = 32\n",
+    "model = Sequential(\n",
+    "    torch.nn.Linear(features_train.shape[1], latent_size1),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(latent_size1, latent_size2),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(latent_size2, 1)\n",
+    ")\n",
+    "\n",
+    "# get number of layers + number of biases\n",
+    "m = len(list(model.parameters()))\n",
+    "\n",
+    "# bounds for the constraints: norm of max each weight matrix should be <= 1\n",
+    "constraint_bounds = [1.]\n",
+    "\n",
+    "# define epochs + loss function - same loss should be defined for all algorithms\n",
+    "criterion = torch.nn.BCEWithLogitsLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4c67ebbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bosadam/Documents/Doktorat/humancompatible-train/env_fairbench/lib/python3.11/site-packages/chop/utils/utils.py:96: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:4416.)\n",
+      "  return torch.mul(tensor.T, other.T).T\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an optimizer with a ball constraints\n",
+    "optimizer = chop.stochastic.FrankWolfe(model.parameters(), chop.constraints.L2Ball(alpha=constraint_bounds[0]),\n",
+    "                                       lr=0.01, momentum=0.9,\n",
+    "                                       normalization='gradient')\n",
+    "\n",
+    "bias_params = [param for name, param in model.named_parameters() if 'bias' in name]\n",
+    "bias_opt = chop.stochastic.PGD(bias_params, chop.constraints.L2Ball(alpha=constraint_bounds[0]), lr=0.01)\n",
+    "\n",
+    "# project the model weights into the feasible region (an assumption of the franke-wolfe)\n",
+    "for i, param in enumerate(model.parameters()):\n",
+    "    param_proj = chop.constraints.L2Ball(alpha=constraint_bounds[0]).prox(param)\n",
+    "\n",
+    "    # Update the parameter in-place\n",
+    "    with torch.no_grad():\n",
+    "        param.copy_(param_proj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "145d9fa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "todo: c = sqrtn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b1307648",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0, loss: 0.6369948247350765, constraints: [1.2321401  0.24523193 1.2428819  0.5799648  1.088693   0.07560302], \n"
+     ]
+    },
+    {
+     "ename": "_LinAlgError",
+     "evalue": "linalg.svd: The algorithm failed to converge because the input matrix contained non-finite values.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31m_LinAlgError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 26\u001b[0m\n\u001b[1;32m     22\u001b[0m c_log\u001b[38;5;241m.\u001b[39mappend([])\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, param \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(model\u001b[38;5;241m.\u001b[39mparameters()):\n\u001b[1;32m     24\u001b[0m \n\u001b[1;32m     25\u001b[0m     \u001b[38;5;66;03m# norm of the w. matrix\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m     norm \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparam\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mord\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# save the value of the constraint\u001b[39;00m\n\u001b[1;32m     29\u001b[0m     c_log[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(norm\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mnumpy())\n",
+      "\u001b[0;31m_LinAlgError\u001b[0m: linalg.svd: The algorithm failed to converge because the input matrix contained non-finite values."
+     ]
+    }
+   ],
+   "source": [
+    "# alloc arrays for plotting\n",
+    "CHOP_c_log_plotting    = []\n",
+    "CHOP_loss_log_plotting = []\n",
+    "\n",
+    "model.train()   \n",
+    "\n",
+    "# training loop\n",
+    "for epoch in range(n_epochs):\n",
+    "\n",
+    "    # alloc the logging arrays\n",
+    "    loss_log = []\n",
+    "    c_log = []\n",
+    "    duals_log = []\n",
+    "\n",
+    "    # alloc norm values array\n",
+    "    norm_values_c = []\n",
+    "\n",
+    "    # go through all data\n",
+    "    for batch_input, batch_label in dataloader:\n",
+    "\n",
+    "        # calculate constraints - just for logging\n",
+    "        c_log.append([])\n",
+    "        for i, param in enumerate(model.parameters()):\n",
+    "\n",
+    "            # norm of the w. matrix\n",
+    "            norm = torch.linalg.norm(param, ord=2)\n",
+    "\n",
+    "            # save the value of the constraint\n",
+    "            c_log[-1].append(norm.detach().numpy())\n",
+    "\n",
+    "        # compute the loss - just for logging purposes\n",
+    "        optimizer.zero_grad()\n",
+    "        bias_opt.zero_grad()\n",
+    "        loss = criterion(model(batch_input), batch_label)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        bias_opt.step()\n",
+    "\n",
+    "        # save the loss for later\n",
+    "        loss_log.append(loss.item())\n",
+    "\n",
+    "    # save the epoch values for plotting\n",
+    "    CHOP_loss_log_plotting.append(np.mean(loss_log))\n",
+    "    CHOP_c_log_plotting.append(np.mean(c_log, axis=0))\n",
+    "\n",
+    "    # print out the epoch values\n",
+    "    print(\n",
+    "        f\"Epoch: {epoch}, \"\n",
+    "        f\"loss: {np.mean(loss_log)}, \"\n",
+    "        f\"constraints: {np.mean(c_log, axis=0)}, \"\n",
+    "    )\n",
+    "    "
    ]
   },
   {
