benchmark + markdown for deterministic and stochastic done. todo: importance sampling

--- a/examples/benchmarking.ipynb
+++ b/examples/benchmarking.ipynb
@@ -22,6 +22,16 @@
     "3. [Switching Subgradient](https://arxiv.org/abs/2301.13314) \n",
     "4. [Cooper](https://github.com/cooper-org/cooper?tab=readme-ov-file) (ALM version)\n",
     "\n",
+    "##### Importance Sampling:\n",
+    "\n",
+    "split train and test\n",
+    "\n",
+    "todo: for SSL-ALM compute balanced sampling constraints on train and in each iteration compute the whole test dataset\n",
+    "\n",
+    "for SSL-ALM compute non-balanced sampling constraints on train and in each iteration compute the whole test dataset\n",
+    "\n",
+    "compare the two\n",
+    "\n",
     "<br>\n",
     "\n",
     "-------------------------------------------------------------------------------\n",
@@ -49,10 +59,19 @@
    "metadata": {},
    "source": [
     "# Deterministic constraints: \n",
+    " \n",
+    "We aim to minimize the expected loss of $f$, where the implicit regression model is a neural network with its weights in a unit sphere. We problem can be defined as\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\min_{x \\in \\mathbb{R}^n} \\quad & \\mathbb{E}[f(x,\\xi)] \\\\\n",
+    "\\text{s.t.} \\quad & \\|W_i\\|_F \\le 1, \\quad \\forall i \\in \\{1,\\ldots,L\\},\n",
+    "\\end{aligned}\n",
+    "\n",
+    "where the $W_i$ is a weight matrix of the fully connected neural network, $||\\cdot||_F$ is a Frobenius norm.\n",
     "\n",
     "#### 1. Unconstrained Optimization\n",
     "\n",
-    "Mainly for setting a reference bar"
+    "For setting a reference bar"
    ]
   },
   {
@@ -1947,13 +1966,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3ec5000",
+   "metadata": {},
+   "source": [
+    "Note the unconstrained Adam is in this case superior to the constrained optimization in the regression loss. This is due to the high restriction of the constraints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cfc3d877",
    "metadata": {},
    "source": [
     "# Stochastic constraints: \n",
     "\n",
-    "TODO: define the problem mathematically\n",
-    "cooper with importance sampling and without\n",
+    "To benchmark the stochastic constraints, we define the regression problem for binary classification of income above a threshold as\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "& \\min_{x \\in \\mathbb{R}^n} \\; \\mathbb{E}[f(x,\\xi)] \\\\\n",
+    "& \\text{s.t.} \\quad \\mathbb{E}[c(x,\\zeta)] \\le 0, \\quad\n",
+    "\\end{aligned}\n",
+    "\n",
+    "where the $f: \\mathbb{R}^n \\times Ξ \\rightarrow \\mathbb{R}$ is a loss, the constraint $c : \\mathbb{R}^n \\times Z \\rightarrow \\mathbb{R}$ is a norm of positive rate fair metric among the sensitive groups of $S = \\{$ man, woman $\\}$, of size $k=2$. That is, we aim to have an unbiased regression model $g$ that has the property of\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\forall S_k \\in S :\\; P\\big(g(x, \\zeta_i) = 1 \\mid S_k = 1\\big)\n",
+    "= P\\big(g(x, \\zeta_i) = 1\\big).\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Such statistics gives us a violation vector $\\bold{v} \\in \\mathbb{R}^k$, we define the constraint as $c(x, \\zeta) = || \\bold{v}(x, \\zeta) ||_p$. We choose a Manhatton $p=1$. For more details about the fairness metrics see [Fairret](https://openreview.net/pdf?id=NnyD0Rjx2B). Such model should be good at classification while maintaining the fairness among sensitive demographics groups.\n",
     "\n",
     "#### 1. Unconstrained Optimization"
    ]
@@ -3355,6 +3395,16 @@
     "plot_losses_and_constraints_single_stochastic(losses, losses_std, constraints, constraints_std, thresholds, \n",
     "                                              titles=['Unconstrained Adam', 'SSL-ALM-SGD', 'SSL-ALM-Adam', \"SSG\", \"Cooper-ALM-IS\"], \n",
     "                                              log_constraints=False, std_multiplier=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65f75c2b",
+   "metadata": {},
+   "source": [
+    "# Importance Sampling\n",
+    "\n",
+    "the importance of balanced sampling gradient"
    ]
   }
  ],
